# tech-support-bot

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  settings.py
app/: main.py  settings.py
app/consumers/: handlers.py  main.py  schemas.py
app/containers/: factories.py  providers.py
app/dtos/: messages.py
app/exceptions/: base.py  chats.py
app/handlers/: chats.py  constants.py  errors.py
app/repositories/: initialize.py  sqls.py
app/repositories/chats/: base.py
app/services/: chats.py  constants.py  web.py
app/services/converters/: chats.py
containers/: providers.py
docker_compose/: bot.yaml  consumer.yaml
dtos/: messages.py
exceptions/: chats.py
handlers/: chats.py
handlers/converters/: chats.py
services/: chats.py  constants.py  web.py
services/converters/: chats.py
